# esp32cam-ai

./: .gitignore  LICENSE  NON-COMMERCIAL.md  README.md  README_LICENSE_SECTION.md  说明Instruction.md
band/nb666/: emulator-log.txt  package-lock.json  package.json
band/nb666/src/: config-watch.json  manifest.json
band/nb666/src/common/: mock-data.js
band/nb666/src/i18n/: defaults.json
band/nb666/src/pages/control/index/: index.ux
band/nb666/src/pages/detail/: detail.ux
band/nb666/src/pages/detail/index/: index.ux
band/nb666/src/pages/history/index/: index.ux
band/nb666/src/pages/home/index/: index.ux
band/nb666/src/pages/index/: index.ux
band/nb666/src/pages/text/index/: index.ux
band/nb666/src/utils/: link.js
board/esp32-s3-cam-ble/: CMakeLists.txt  README.md  sdkconfig.defaults
board/esp32-s3-cam-ble/arduino/BandBridgeCam/: BandBridgeCam.ino
board/esp32-s3-cam-ble/main/: CMakeLists.txt  app_main.c  ble_camera_protocol.h  ble_camera_service.c  ble_camera_service.h  camera_board_pins.h  camera_controller.c  camera_controller.h  image_chunker.c  image_chunker.h  wifi_preview_server.c  wifi_preview_server.h
mobile/android-demo/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/android-demo/app/: build.gradle.kts  proguard-rules.pro
mobile/android-demo/app/src/main/: AndroidManifest.xml
mobile/android-demo/app/src/main/java/com/demo/bandbridge/: BridgeApplication.kt  MainActivity.kt
mobile/android-demo/app/src/main/res/values/: strings.xml  themes.xml
(+12 files in other folders)
